[Tarea-5] Añadir mensaje de exception para errores de formato

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,5 +18,6 @@ exception:
     invalid-operation: "Invalid operation"
     operation-not-supported: "Operation not supported"
     generic-exception: "Internal Server Error"
-    list-numbers-wrong: "The list should contain at least two numbers"
+    incorrect-data-format: "Incorrect data format"
+
 
